--- a/src/Weather.css
+++ b/src/Weather.css
@@ -160,12 +160,17 @@ li {
   font-size: 15px;
 }
 
+.FiveDayForecast .forecast-min-temp {
+  opacity: 0.7;
+  margin-left: 5px;
+}
+
 .card {
   box-shadow: 3px 3px 3px gray;
   color: rgb(44, 44, 63);
 }
 
-.col-3 {
+.col-sm-3 {
   flex: 0 0 auto;
   width: 20%;
 }
