--- a/src/Weather.css
+++ b/src/Weather.css
@@ -164,6 +164,9 @@ li {
 }
 
 @media (max-width: 600px) {
+  body {
+    margin-bottom: 50px;
+  }
   .App .container {
     width: 90%;
     margin: 0 auto;
